Fix alignment between clinic and patient chat

--- a/src/app/referrals/referrals.component.scss
+++ b/src/app/referrals/referrals.component.scss
@@ -19,9 +19,13 @@
     width: 85%;
     position: sticky;
     top: 24px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    
+    > div {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      cursor: pointer;
+    }
   }
 
   .chat {
